fix navbar gap

--- a/HospitalCMS/Content/Site.css
+++ b/HospitalCMS/Content/Site.css
@@ -114,5 +114,5 @@ textarea {
 }*/
 
 .body-content {
-    margin-top: 70px;
+    margin-top: 10px;
 }
