--- a/HospitalCMS/Content/carousal.css
+++ b/HospitalCMS/Content/carousal.css
@@ -13,7 +13,7 @@ body {
 
 /* Special class on .container surrounding .navbar, used for positioning it into place. */
 .navbar-wrapper {
-  position: absolute;
+  /*position: absolute;*/
   top: 0;
   right: 0;
   left: 0;
